# todo-datastar-app

./: .gitignore  cabal.project  datastar-examples.cabal  flake.nix  todo-datastar-app.cabal
.github/workflows/: ci.yml
datastar-lucid/Data/List/: Extra.hs
datastar-lucid/Lucid/: Datastar.hs
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/tests/: active-search.spec.ts  animations.spec.ts  bulk-update.spec.ts  click-to-edit.spec.ts  click-to-load.spec.ts  delete-row.spec.ts  edit-row.spec.ts  file-upload.spec.ts  infinite-scroll.spec.ts  inline-validation.spec.ts  lazy-load.spec.ts  lazy-tabs.spec.ts  progress-bar.spec.ts  todomvc.spec.ts
lib/Servant/: Datastar.hs
src/: Layout.hs  Main.hs
src/Examples/: ActiveSearch.hs  Animations.hs  BulkUpdate.hs  ClickToEdit.hs  ClickToLoad.hs  DeleteRow.hs  EditRow.hs  FileUpload.hs  Index.hs  InfiniteScroll.hs  InlineValidation.hs  LazyLoad.hs  LazyTabs.hs  Main.hs  ProgressBar.hs  TodoMVC.hs
src/Servant/: Datastar.hs
src/Todo/: API.hs  CSS.hs  DB.hs  HTML.hs  Types.hs
