cabal-version: 3.0
name:          datastar-examples
version:       0.1.0.0
synopsis:      Datastar examples with Servant + Lucid
license:       MIT
license-file:  LICENSE
author:        Paolo Veronelli
maintainer:    paolo.veronelli@gmail.com
category:      Web
build-type:    Simple

library
    default-language: GHC2021
    ghc-options:
        -Wall
        -Werror

library datastar-servant
    exposed-modules:  Servant.Datastar
    hs-source-dirs:   lib
    default-language: GHC2021
    default-extensions:
        DataKinds
        ImportQualifiedPost
        OverloadedStrings
        TypeFamilies
        TypeOperators
    build-depends:
        , base            >= 4.14  && < 5
        , aeson           >= 2.0   && < 3
        , datastar-hs     >= 0.1   && < 1
        , http-types      >= 0.12  && < 1
        , servant         >= 0.20  && < 1
        , servant-server  >= 0.19  && < 1
        , text            >= 1.2   && < 3
    ghc-options:
        -Wall
        -Werror
        -Wunused-imports
        -Wunused-packages
        -Wmissing-export-lists
        -Wname-shadowing
        -Wdeferred-out-of-scope-variables
        -Wpartial-type-signatures
        -Wredundant-constraints

library datastar-lucid
    exposed-modules:
        Data.List.Extra
        Lucid.Datastar
    hs-source-dirs:   datastar-lucid
    default-language: GHC2021
    default-extensions:
        GADTs
        ImportQualifiedPost
        OverloadedStrings
    build-depends:
        , base            >= 4.14  && < 5
        , lucid           >= 2.11  && < 3
        , operational     >= 0.2   && < 1
        , text            >= 1.2   && < 3
    ghc-options:
        -Wall
        -Werror
        -Wunused-imports
        -Wunused-packages
        -Wmissing-export-lists
        -Wname-shadowing
        -Wdeferred-out-of-scope-variables
        -Wpartial-type-signatures
        -Wredundant-constraints

executable datastar-examples
    main-is:          Examples/Main.hs
    other-modules:
        Examples.ActiveSearch
        Examples.Animations
        Examples.BulkUpdate
        Examples.ClickToEdit
        Examples.ClickToLoad
        Examples.DeleteRow
        Examples.EditRow
        Examples.FileUpload
        Examples.Index
        Examples.InfiniteScroll
        Examples.InlineValidation
        Examples.LazyLoad
        Examples.LazyTabs
        Examples.ProgressBar
        Examples.TodoMVC
        Layout
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
        DataKinds
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        ImportQualifiedPost
        NamedFieldPuns
        OverloadedStrings
        StrictData
        TypeFamilies
        TypeOperators
    build-depends:
        , base            >= 4.14  && < 5
        , aeson           >= 2.0   && < 3
        , bytestring      >= 0.10  && < 1
        , datastar-lucid
        , datastar-servant
        , http-media      >= 0.8   && < 1
        , lucid           >= 2.11  && < 3
        , random          >= 1.2   && < 2
        , servant         >= 0.20  && < 1
        , servant-server  >= 0.19  && < 1
        , text            >= 1.2   && < 3
        , warp            >= 3.2   && < 4
    ghc-options:
        -threaded
        -Wall
        -Werror
        -Wunused-imports
        -Wunused-packages
        -Wmissing-export-lists
        -Wname-shadowing
        -Wdeferred-out-of-scope-variables
        -Wpartial-type-signatures
        -Wredundant-constraints
