cabal-version: 3.0
name:          todo-datastar-app
version:       0.1.0.0
synopsis:      TODO list app with datastar-hs and SQLite
license:       MIT
license-file:  LICENSE
author:        Paolo Veronelli
maintainer:    paolo.veronelli@gmail.com
category:      Web
build-type:    Simple

library
    exposed-modules:  Servant.Datastar
    hs-source-dirs:   lib
    default-language: GHC2021
    default-extensions:
        DataKinds
        ImportQualifiedPost
        OverloadedStrings
        TypeFamilies
        TypeOperators
    build-depends:
        , base            >= 4.14  && < 5
        , aeson           >= 2.0   && < 3
        , datastar-hs     >= 0.1   && < 1
        , servant         >= 0.20  && < 1
        , servant-server  >= 0.19  && < 1
        , text            >= 1.2   && < 3
    ghc-options:
        -Wall
        -Werror
        -Wunused-imports
        -Wunused-packages

library datastar-lucid
    exposed-modules:
        Data.List.Extra
        Lucid.Datastar
    hs-source-dirs:   datastar-lucid
    default-language: GHC2021
    default-extensions:
        GADTs
        ImportQualifiedPost
        OverloadedStrings
    build-depends:
        , base            >= 4.14  && < 5
        , lucid           >= 2.11  && < 3
        , operational     >= 0.2   && < 1
        , text            >= 1.2   && < 3
    ghc-options:
        -Wall
        -Werror
        -Wunused-imports
        -Wunused-packages

executable todo-datastar-app
    main-is:          Main.hs
    other-modules:
        Todo.API
        Todo.CSS
        Todo.DB
        Todo.HTML
        Todo.Types
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
        DataKinds
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        ImportQualifiedPost
        OverloadedStrings
        StrictData
        TypeFamilies
        TypeOperators
    build-depends:
        , base            >= 4.14  && < 5
        , aeson           >= 2.0   && < 3
        , bytestring      >= 0.10  && < 1
        , clay            >= 0.14  && < 1
        , datastar-lucid
        , direct-sqlite   >= 2.3   && < 3
        , http-media      >= 0.8   && < 1
        , http-types      >= 0.12  && < 1
        , lucid           >= 2.11  && < 3
        , servant         >= 0.20  && < 1
        , servant-server  >= 0.19  && < 1
        , text            >= 1.2   && < 3
        , todo-datastar-app
        , wai             >= 3.2   && < 4
        , warp            >= 3.2   && < 4
    ghc-options:
        -threaded
        -Wall
        -Werror
        -Wunused-imports
        -Wunused-packages
